tests/failed/10-explicit-discriminant.stderr
error: All enum variants must have explicit discriminants
 --> $DIR/10-explicit-discriminant.rs:8:5
  |
8 |     Baz,
  |     ^^^
